--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,17 +26,14 @@
     <string name="dialog_confirm">Yes</string>
     <string name="dialog_cancel">No</string>
     <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
 
     <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="chat_header">Chat</string>
+    <string name="username_title">Username</string>
+    <string name="remember_login_title">Remember login</string>
+    <string name="cache_header">Cache</string>
+    <string name="cache_storage_title">Enable offline mode</string>
+    <string name="chat_color">Chat background color (in hex)</string>
 </resources>
