--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="copyright">App created by VicentMY</string>
     <!-- Navigation -->
     <string name="nav_songs">Song List</string>
-    <string name="nav_playlists">Playlists</string>
+    <string name="nav_playlists">Retrofit</string>
     <string name="navigation_drawer_open">Open navigation</string>
     <string name="navigation_drawer_close">Close navigation</string>
     <string name="nav_player">Music player</string>
@@ -54,5 +54,9 @@
     <string name="no_internet_icon">No Internet Conection Icon</string>
     <string name="dialog_offline_title">Enabling Offline Mode</string>
     <string name="dialog_offline_message">By enabling offline mode, the app will store the needed data in your device and therefore will use more storage space.</string>
-    <string name="dialog_ok">Ok</string>
+    <string name="dialog_ok">OK</string>
+    <string name="chat_et_hint">Type a message</string>
+    <string name="chat_contDesc">send message button</string>
+    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
+    <string name="relogin_required">A re-login is required</string>
 </resources>
