Added shuffle function to the player. When on the player will follow the list at a random order. Added repeat function to the player. It has 3 modes:  - Default: Goes through the list normally until the end and stops.  - Repeat playlist: Goes through the list but when it ends the list starts again.  - Repeat song: Repeats the current song when it ends. Added start from the beginning: When the song just started playing you can skip backwards and start from the beginning. Added skip to first / last song: When skipping forwards in the last song, the player will start playing the first song of the list and vice versa. Added minimum width to the chat messages.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -68,7 +68,8 @@
     <string name="playlist_name_field">Nombre de playlist</string>
     <string name="playlist_created">¡Playlist creada!</string>
     <string name="dialog_delete_playlist_title">Eliminar Playlist</string>
-    <string name="dialog_delete_playlist_message">¿Seguro/a que quieres eliminar esta playlist? Una vez eliminada no se puede recuperar.</string>
+    <string name="dialog_delete_playlist_message_1">¿Seguro/a que quieres eliminar</string>
+    <string name="dialog_delete_playlist_message_2">Una vez eliminada no se puede recuperar.</string>
     <string name="playlist_deleted_correctly">Playlist eliminada correctamente</string>
     <string name="err_removing_playlist">Error al eliminar playlist</string>
     <string name="dialog_create">Crear</string>
@@ -100,4 +101,5 @@
     <string name="cannot_delete_fav_playlist">No puedes quitar la playlist de favoritas</string>
     <string name="cannot_man_add_fav_songs">Solo puedes añadir canciones a través del reproductor</string>
     <string name="no_songs">No se han encontrado canciones</string>
+    <string name="dialog_rename_playlist_title">Renombrar playlist</string>
 </resources>
